@@ -62,7 +62,9 @@ public class SyntaxDocument extends PlainDocument
 	 */
 	public void tokenizeLines()
 	{
+		long start = System.currentTimeMillis();
 		tokenizeLines(0,getDefaultRootElement().getElementCount());
+		System.err.println(System.currentTimeMillis() - start);
 	}
 
 	/**
@@ -201,6 +203,9 @@ public class SyntaxDocument extends PlainDocument
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.21  2000/04/08 06:57:14  sp
+ * Parser rules are now hashed; this dramatically speeds up tokenization
+ *
  * Revision 1.20  2000/04/07 06:57:26  sp
  * Buffer options dialog box updates, API docs updated a bit in syntax package
  *
